instructions.Instructions.scala.error
Erreur de compilation :
Instructions:3: error: not found: type int
avance(2:int);
         ^Instructions:5: error: not found: type int
avance(2:int);
         ^Instructions:7: error: not found: type int
avance(2:int);
         ^