instructions.Instructions.scala.code
gauche();
baisseBrosse();
avance(2:int);
gauche();
avance(2:int);
gauche();
avance(2:int);
leveBrosse();
gauche();
avance();
gauche();
avance();